all the statues are added and all material categories

--- a/views/admin/materials/addMaterial.ejs
+++ b/views/admin/materials/addMaterial.ejs
@@ -31,8 +31,21 @@
             </div>
             <select class="form-select mb-3" aria-label="category" name="category" id="category">
                 <option selected disabled hidden>Select a category</option>
-                    <option value="PC & Laptop">PC & Laptop</option>
-                    <option value="Others">Others</option>
+                    <option value="PC">PC</option>
+                    <option value="Laptop">Laptop</option>
+                    <option value="Server">Server</option>
+                    <option value="All in one">All in one</option>
+                    <option value="Onduleur">Onduleur</option>
+                    <option value="Laser printer">Laser printer</option>
+                    <option value="Inkjet printer">Inkjet printer</option>
+                    <option value="Receipt printer">Receipt printer</option>
+                    <option value="Network switch">Network switch</option>
+                    <option value="Network cabinet">Network cabinet</option>
+                    <option value="Alarm system">Alarm system</option>
+                    <option value="Video surveillance system">Video surveillance system</option>
+                    <option value="Fire system">Fire system</option>
+                    <option value="Anti-theft gate">Anti-theft gate</option>
+                    <option value="Time Clock">Time Clock</option>
             </select>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Create</button>
