--- a/views/visit/status.ejs
+++ b/views/visit/status.ejs
@@ -37,12 +37,19 @@
                 <li class="list-group-item"><b>Clean: </b> <%= status.cleanliness %></li>
                 <li class="list-group-item"><b>Physical State: </b> <%= status.physicalState %></li>
                 <li class="list-group-item"><b>Battery: </b> <%= status.inverterAutonomy %></li>
-                <li class="list-group-item"><b>Antivirus: </b> <%= status.antivirusStatus %></li>
+                <li class="list-group-item"><b>Antivirus State: </b> <%= status.antivirusStatus %></li>
+                <li class="list-group-item"><b>Antivirus Update: </b> <%= status.antivirusUpdate %></li>
+                <li class="list-group-item"><b>Antivirus License: </b> <%= status.antivirusLicense %></li>
                 <li class="list-group-item"><b>Disk Status: </b> <%= status.diskStatus %></li>
-                <li class="list-group-item"><b>Operation System: </b> <%= status.osState %></li>
+                <li class="list-group-item"><b>CHKDSK: </b> <%= status.chkdsk %></li>
+                <li class="list-group-item"><b>Fragmentation: </b> <%= status.fragmentation %></li>
+                <li class="list-group-item"><b>SFC / Scan now: </b> <%= status.sfc %></li>
                 <li class="list-group-item"><b>Network State: </b> <%= status.networkState %></li>
                 <li class="list-group-item"><b>Windows License: </b> <%= status.windowsLicense %></li>
                 <li class="list-group-item"><b>Office License: </b> <%= status.officeLicense %></li>
+                <li class="list-group-item"><b>Windows Restore Point: </b> <%= status.WindowsRestorePoint %></li>
+                <li class="list-group-item"><b>Production Software: </b> <%= status.ProductionSoftware %></li>
+                <li class="list-group-item"><b>Share And Backup: </b> <%= status.ShareAndBackup %></li>
                 <li class="list-group-item"><b>Comment: </b> <%= status.comment %></li>
               </ul>
             
