--- a/views/admin/visits/visitStatues.ejs
+++ b/views/admin/visits/visitStatues.ejs
@@ -1,9 +1,9 @@
 <%- include('../../includes/head'); -%>
     <link rel="stylesheet" href="/css/home.css">
 </head>
-<body class="home ">
+<body class="home">
     <%- include('../../includes/navigation'); -%>
-<main class="m-3">
+<main class="container overFlow">
     <table class="table table-striped caption-top table-hover table-bordered border-dark">
         <thead class="table-primary table-bordered border-dark">
           <tr>
