--- a/views/admin/visits/visits.ejs
+++ b/views/admin/visits/visits.ejs
@@ -9,11 +9,20 @@
       <div>
         <%- include('../../includes/filterBadge'); -%>
       </div>
-      <button type="button" class="btn btn-primary d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#filterModel" id="filterButton">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-funnel me-1" viewBox="0 0 16 16">
-            <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2h-11z"/>
-          </svg>
-        Filters</button>
+      <div class="d-inline-flex">
+        <button type="button" class="btn btn-primary d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#filterModel" id="filterButton">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-funnel me-1" viewBox="0 0 16 16">
+              <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2h-11z"/>
+            </svg>
+          Filters</button>
+          <a href="/admin/visits" class="btn btn-secondary d-flex align-items-center mx-2">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise me-1" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
+              <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
+            </svg>
+            Reset</a>
+      </div>
+        
     </div>
     <table class="table table-striped caption-top table-hover table-bordered border-dark">
         <thead class="table-primary table-bordersed border-dark">
@@ -61,6 +70,9 @@
             <% }) %>
         </tbody>
       </table>
+      <div class="sticky-top">
+        <%- include('../../includes/pagination'); -%>
+      </div>
 </main>
 
 <!-- Modal delete visit -->
@@ -93,7 +105,7 @@
           <h5 class="modal-title" id="filterModelLabel">Filters</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <form action="/admin/visits" method="POSt" id="filterForm">
+        <form action="/admin/visits" method="GET" id="filterForm">
           <div class="modal-body">
               <div class="input-group mb-3">
                   <label class="input-group-text" for="inputGroupSelect01">Store</label>
@@ -128,7 +140,7 @@
                 </div>
           </div>
           <div class="modal-footer">
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <!-- <input type="hidden" name="_csrf" value="<%= csrfToken %>"> -->
             <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
              
               <button type="submit" class="btn btn-outline-primary">Apply Filters</button>
